简单版微博

--- a/oneTry/index.html
+++ b/oneTry/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <input type="text" name="" id="" style="width: 100px;height:500px">
+    <a href="javascript:void(8)">11</a>
 </body>
 </html>
