--- a/oneTry/index.html
+++ b/oneTry/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" name="" id="" style="width: 100px;height:500px">
-    <a href="javascript:void(8)">11</a>
+    <div id="id"><div>111</div></div>
 </body>
 </html>
